modificaciones del proyecto de html practica final framese

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "livePreview.defaultPreviewPath": "/Lenguaje de Marcas/Practicas/ifrmaset/1_principal.html"
 }
